@startuml
' Configurações visuais
skinparam classAttributeIconSize 0
skinparam classFontSize 14
skinparam ArrowColor Black

' Classes principais
class Administrator {
  +id: UUID
  +name: String
  +email: String
  +initializeSystem(): void
  +registerPhysician(): Physician
  +viewPhysician(id): Physician
  +viewPatient(id): Patient
  +searchPatients(name|email|phone): List<Patient>
  +scheduleAppointment(): Appointment
  +viewAppointment(id): Appointment
  +viewAppointmentRecord(id): AppointmentRecord
  +generateStatistics(): Report
}

class Physician {
  +id: UUID
  +name: String
  +specialty: String
  +contactInfo: String
  +workingHours: String
  +profilePhoto: String
  +viewRecords(patientId): List<AppointmentRecord>
  +recordAppointment(): AppointmentRecord
  +updateAppointmentRecord(): void
  +generatePrescription(): Prescription
}

class Patient {
  +id: UUID
  +name: String
  +email: String
  +morada: String
  +dob: Date
  +phone: String
  +insuranceInfo: String
  +healthConcerns: String
  +photo: String
  +dataConsent: Boolean
  +register(): Patient
  +viewAppointments(): List<Appointment>
  +viewRecords(): List<AppointmentRecord>
  +updatePersonalData(): void
}

class Appointment {
  +appointmentId: UUID
  +date: Date
  +time: String
  +consultationType: String
  +status: String
  +create(): void
  +update(): void
  +cancel(): void
}





class SystemSetup {
  +bootstrapAdmins(): void
  +bootstrapDepartments(): void
  +loadSampleData(): void
}

class Auth {
  +useJWT(): Boolean
}

' Relacionamentos
Administrator --> Physician : manages >
Administrator --> Patient : manages >
Administrator --> Appointment : schedules >
Physician --> Appointment : participates >
Patient --> Appointment : books/views >
Patient --> Physician : searches >

SystemSetup ..> Administrator
SystemSetup ..> Physician
SystemSetup ..> Patient

Auth ..> Administrator
Auth ..> Physician
Auth ..> Patient

@enduml
